# cpp_game

./: .gitignore  CMakeLists.txt
assets/: textures.tml
assets/maps/: map.tmx
src/: main.cpp
src/Animation/: Animation.cpp  Animation.h  SeqAnimation.cpp  SeqAnimation.h  SpriteAnimation.cpp  SpriteAnimation.h
src/Camera/: Camera.cpp  Camera.h
src/Characters/: Character.h  Enemy.cpp  Enemy.h  Warrior.cpp  Warrior.h
src/Collision/: CollisionHandler.cpp  CollisionHandler.h
src/Core/: Engine.cpp  Engine.h
src/Graphics/: TextureManager.cpp  TextureManager.h
src/Inputs/: Input.cpp  Input.h
src/Map/: GameMap.h  Layer.h  MapParser.cpp  MapParser.h  TileLayer.cpp  TileLayer.h
src/Objects/: GameObject.h  IObject.h
src/Physics/: Collider.h  Point.h  RigidBody.h  Transform.h  Vector2D.h
src/Timer/: Timer.cpp  Timer.h
